Prevent topic description from overflowing left

--- a/app/assets/sass/explore.scss
+++ b/app/assets/sass/explore.scss
@@ -448,6 +448,7 @@ li.govuk-tabs__list-item {
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
+  padding-right: 45px;
   h1 {
     padding-top: 0;
   }
